-Added /roll for a random number between 1 and 100 -Fixed word-wrap to break word (thanks pflance)

--- a/public/css/chat/chat.css
+++ b/public/css/chat/chat.css
@@ -37,4 +37,5 @@
 .message-text {
     display:inline-block;
     padding: 0 2px;
+    word-wrap: break-word;
 }
